2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/setupenv.c: Avoid implicit conversion of chars to
	booleans.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/copydir.c: selinux_checked, selinux_enabled, and set_orig
	are now booleans.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/setugid.c (setup_uid_gid): The is_console argument is now
	a bool.
	* libmisc/setugid.c: Avoid implicit conversion of integers /
	pointers to booleans.
	* libmisc/setugid.c: Add brackets.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/pam_pass.c (do_pam_passwd): The silent and
	change_expired are no booleans instead of int.
	* libmisc/pam_pass.c: The return value of pam_end is not checked
	on purpose.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/getlong.c: Avoid implicit conversion of pointers / chars
	to booleans.
	* libmisc/getlong.c: Add brackets.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/valid.c: Avoid implicit conversion of pointers / chars
	to booleans.
	* libmisc/valid.c: Add brackets.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/yesno.c: yes_or_no returns a bool instead of int.
	* libmisc/yesno.c: Avoid implicit conversion of pointers to
	booleans.
	* libmisc/yesno.c: The return value of fflush is not checked
	on purpose.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/age.c: Avoid implicit conversion of integers to
	booleans.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/rlogin.c: Avoid assignments in comparisons.
	* libmisc/rlogin.c: Avoid implicit conversion of integers to
	booleans.
	* libmisc/rlogin.c: Add brackets.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/failure.c (failcheck): The failed argument is a bool.
	* libmisc/failure.h: Likewise.