@@ -1,5 +1,14 @@
 2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* libmisc/loginprompt.c: Avoid implicit conversion of pointers /
+	chars to booleans.
+	* libmisc/loginprompt.c: Add brackets.
+	* libmisc/loginprompt.c: Avoid assignments in comparisons.
+	* libmisc/loginprompt.c: The return values of fclose and fflush
+	are not checked on purpose.
+
+2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* libmisc/setupenv.c: Avoid implicit conversion of chars to
 	booleans.
 
